[gd_scene load_steps=3 format=3 uid="uid://by8rn0gvogmp6"]

[ext_resource type="Script" uid="uid://ck62v2tkoxbvd" path="res://scripts/audio_handler.gd" id="1_ql6pa"]
[ext_resource type="AudioStream" uid="uid://funp0ky6avpf" path="res://assets/sounds/thetallgrass.wav" id="2_m0grf"]

[node name="audioHandler" type="Node"]
process_mode = 3
script = ExtResource("1_ql6pa")

[node name="soundEffectQueue" type="Node" parent="."]

[node name="soundEffectQueue3D" type="Node" parent="."]

[node name="bgMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_m0grf")
autoplay = true
bus = &"musicBus"
